Non-unified build fixes, late July 2020 edition https://bugs.webkit.org/show_bug.cgi?id=214918

Unreviewed build fix.

No new tests needed.


* Modules/webaudio/WebKitOscillatorNode.h: Add missing WebKitAudioContext.h header to make
the constructor of WebKitOscillatorNode that WebKitAudioContext inherits from the base
context, otherwise the compiler does not know which base class constructor to invoke.
* bindings/js/JSDOMConvertDate.h: Add missing JSGlobalObject.h header.
* bindings/js/ReadableStreamDefaultController.cpp: Sprinkle missing JSC:: namespace
prefixes where needed.
(WebCore::invokeReadableStreamDefaultControllerFunction):
(WebCore::ReadableStreamDefaultController::close):
(WebCore::ReadableStreamDefaultController::error):
(WebCore::ReadableStreamDefaultController::enqueue):
* editing/SpellChecker.cpp: Add missing inclusion of TextIterator.h.
* editing/SpellChecker.h: Add missing inclusion of SimpleRange.h.
* editing/TextCheckingHelper.h: Forward declare Frame and VisibleSelection.
* editing/TextIterator.cpp: Add missing inclusion of Range.h.
* workers/WorkerScriptLoader.h: Add missing inclusion of CertificateInfo.h.


Canonical link: https://commits.webkit.org/227740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265039 268f45cc-cd09-0410-ab3c-d52691b4dbfc