Source/WebCore/editing/SpellChecker.cpp
@@ -38,6 +38,7 @@
 #include "RenderObject.h"
 #include "Settings.h"
 #include "TextCheckerClient.h"
+#include "TextIterator.h"
 
 namespace WebCore {
 
